--- a/inproc-multiple-container/Dockerfile
+++ b/inproc-multiple-container/Dockerfile
@@ -9,8 +9,8 @@ RUN cd /src/dotnet-function-app && \
     dotnet publish *.csproj --output /home/site/wwwroot
 
 # To enable ssh & remote debugging on app service change the base image to the one below
-# FROM mcr.microsoft.com/azure-functions/dotnet:4-appservice
-FROM larohra/testlinuxbuild-ssh:v1.0.2
+# FROM mcr.microsoft.com/azure-functions/dotnet:4-appservice 
+FROM larohra/local-host
 ENV AzureWebJobsScriptRoot=/home/site/wwwroot \
     AzureFunctionsJobHost__Logging__Console__IsEnabled=true
 
